(update) My Info

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Identity | A Personal One-Page Identity Template</title>
+        <title>Ayush Agarwal</title>
         <!-- Meta Tags -->
-        <link rel="icon" type="image/png" href="favicon.png" />
+        <link rel="icon" type="image/png" href="images/avatar.jpg" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <!-- SEO -->
-        <meta name="keywords" content="Single Page Template, HTML5 Template, CSS Template, Personal Identity Template, Personal Portfolio Template" />
-        <meta name="description" content="A single page Personal Identity Template written smoothly in CSS, HTML5 and JS." />
+        <meta name="keywords" content="Ayush Agarwal, Letstream, Founder, CEO, Chief Executive Office, Web Development, Freelancer, Letstream Ventures private limited" />
+        <meta name="description" content="Founder/CEO, Letstream, Letstream Ventures Private Limited." />
         <!-- CSS -->
         <link rel="stylesheet" href="css/main.css" />
     </head>
@@ -29,33 +29,36 @@
             <section id="main" class="block-center">
                 <header>
                     <span class="avatar block-center">
-                        <img src="images/avatar.svg" alt="Avatar"/>
+                        <img src="images/avatar.jpg" alt="Avatar"/>
                     </span>
-                    <h1>Lorem Ipsum</h1>
-                    <p id="post">UI/UX Designer</p>
+                    <h1>Ayush Agarwal</h1>
+                    <p id="post">Founder/CEO, Letstream</p>
                 </header>
                 <footer>
                     <ul class="icons">
                         <li>
-                            <a href="#" class="fa fa-twitter"></a>
+                            <a href="https://linkedin.com/in/thisisayush" class="fa fa-linkedin"></a>
                         </li>
                         <li>
-                            <a href="#" class="fa fa-instagram"></a>
+                            <a href="https://twitter.com/thisisayushaa" class="fa fa-twitter"></a>
                         </li>
                         <li>
-                            <a href="#" class="fa fa-facebook"></a>
+                            <a href="https://facebook.com/thisisyush" class="fa fa-facebook"></a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/thisisyush" class="fa fa-github"></a>
                         </li>
                     </ul>
                 </footer>
             </section>
             <footer id="footer">
-                <p>Design by <a href="http://thisisayush.com" target="_blank" title="Ayush Agarwal">Ayush Agarwal</a> | 2017</p>
+                <p>Design by <a href="https://www.theletstream.com/" target="_blank" title="Letstream">Letstream &reg;</a> | 2020</p>
             </footer>
         </div>
         <script>
             window.onload = function(){
                 var i = 0;
-                var post = ["Donec ultrices","Praesent scelerisque","Donec accumsan"];
+                var post = ["Founder/CEO, Letstream", "Full Stack Web Developer", "Open Source Enthusiast", "Coffee?"];
                 setTimeout(function(){
                     document.getElementById("loader").remove();
                 },2000);
