(add) Google Analytics

--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
         <meta name="description" content="Founder/CEO, Letstream, Letstream Ventures Private Limited." />
         <!-- CSS -->
         <link rel="stylesheet" href="css/main.css" />
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118193123-1"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-118193123-1');
+        </script>
+
     </head>
     <body>
         <div id="loader">
