--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                             <a href="https://twitter.com/thisisayushaa" class="fa fa-twitter"></a>
                         </li>
                         <li>
-                            <a href="https://facebook.com/thisisyush" class="fa fa-facebook"></a>
+                            <a href="https://facebook.com/thisisayush" class="fa fa-facebook"></a>
                         </li>
                         <li>
-                            <a href="https://github.com/thisisyush" class="fa fa-github"></a>
+                            <a href="https://github.com/thisisayush" class="fa fa-github"></a>
                         </li>
                     </ul>
                 </footer>
